更新 瓦尔基里报告

--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -59,7 +59,7 @@
   - 发生时机：『Amadeus』疑似被劫持时接到“红莉栖”的联络，接听后
   - 此事件变成未发生
   - 新年派对袭击事件变为未发生
-- 红莉栖疑似进入『Amadeus』
+- 『Amadeus』的“红莉栖”疑似成为了真正的红莉栖
   - 猜测其机能等同于人脑，所以也有能力产生 *Reading·Steiner*
   - 红莉栖向真帆交托遗志：
     - “我们想要到达的世界是确实存在的。”
@@ -75,8 +75,8 @@
   - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-  - ■■■■■■■■■■
-  - ■■■■■■■■■■
+- ■■■■■■■■■■
+- ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
