--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -79,11 +79,11 @@
   - ■■ 红莉栖的笔记本电脑和硬盘
 - ■■ 红莉栖的记忆备份
   - ■■■■■■■■■■
-  - ■■ 篝脑海中的记忆备份
+  - ■■ 篝脑中的记忆备份
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-  - ■■■■■■■■■■
-  - ■■■■■■■■■■
+- ■■■■■■■■■■
+- ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
