--- a/article/sg0/doc/0139.md
+++ b/article/sg0/doc/0139.md
@@ -2,10 +2,13 @@
 > 1.055821  
 > [ 2036/08/13 ]  
 
+| [←prev](./0138) | [menu](../) | [next→](./0140) |
+
+---
 ## 情报整理 | 各方势力
 ### LABMem
 - 冈部伦太郎
-  - 已觉醒 + 世界修正拳（主动）
+  - 已觉醒——3000 次时间跳跃 + 世界修正拳（主动）
   - 2025 年去世（？）
   - 亲历未来战争世界与琉华子的牺牲
   - 3000 次 跳跃回到过去，集齐 LABMem
@@ -68,12 +71,12 @@
   - ■■《中钵论文》的红莉栖原本
   - 破坏红莉栖的笔记本电脑和硬盘
 - 删除红莉栖的记忆备份
-  - 删除『Amadeus』的记忆备份
-  - 删除篝脑海中的记忆备份
+  - 删除『Amadeus』和记忆备份
+  - 删除篝脑中的记忆备份
 - 凤凰院凶真觉醒
-  - 3000 次时间跳跃——世界修正拳（主动）
-  - 发送 D-RINE
-  - ■■■■■■■■■■
+  - 3000 次时间跳跃 + 世界修正拳（主动）
+- D-RINE
+- ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
@@ -81,7 +84,7 @@
 “欺骗世界吧！连接可能性吧！世界可以被欺骗！”  
 <p align="right">LABMem No.001『凤凰院凶真』</p>  
 
-![](../img/0139-1.png)
+![](../static/image/0139-1.png)
 
 
 <br/>
