--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -58,9 +58,11 @@
   - 冈伦最终被交给美军基地
   - 结束时机：见到美军手中的『Amadeus』的“红莉栖”
 - 新型脑炎
-  - 真实原因是 *Reading·Steiner*
+  - 实际就是不同程度的 *Reading·Steiner*
   - 吹雪记得在其他世界线的经历
   - 『教授』在收集新型脑炎患者
+- 桶子秘密基地遭遇袭击
+  - 在“红莉栖”的提醒下提前发现，成功躲开
 
 ## Steins;Gate 达成条件
 - ■■■■■■■■■■■■■
@@ -71,14 +73,14 @@
   - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-  - ■■■■■■■■■■
-  - ■■■■■■■■■■
+- ■■■■■■■■■■
+- ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
 
 “我相信，凤凰院凶真迟早有一天一定会和我们一起……不，不对，是站在我们的前阵，指引我们。”  
-<p align="right">LABMem No.003『巴莱尔·提托』</p>  
+<p align="right">LABMem No.002『巴莱尔·提托』</p>  
 
 ![](../static/image/0049-1.png)
 
