--- a/article/sg0/doc/0128.md
+++ b/article/sg0/doc/0128.md
@@ -114,7 +114,7 @@
 这是她对篝脑中的红莉栖的记忆说的话。但是——  
 “比屋定，你并不是萨列里。”  
 “诶？”  
-“你是出色的 Amadeus 啊。”  
+“你是名副其实的 Amadeus 啊。”  
 “……”  
 
 是的，现在，我存在于这里。不是在那冰冷黑暗的数据海洋，而是活在此时此地，在此刻存在。真帆的话犹如黑暗中的一盏明灯，让温暖回到了我一直寒冷沉沦的心。可是——**红莉栖她，现在依旧存在于那个世界——那个无机质的，让人打心底里感到寒冷的世界**。她本人去世后，记忆依然存活在那里。并且，存活下来的记忆还要被卷入各种各样的阴谋中。**红莉栖的苦痛，即使失去了肉体，也依然持续着**。不，不止是红莉栖，篝和铃羽也是，还有未来的真由理、菲莉丝、琉华子、桶子他们都是，大家都在痛苦和迷茫中与残酷的命运对抗着，即使如此还在不断前进着。我曾以为，只要真由理活下来了就可以了；我曾想过，就算未来是第三次世界大战，不管世界变得如何，只要真由理能好好活着就足够了；我尝试这样想过，哪怕那个世界尽是血与泪，现在还保持着安稳就星了。我以为我是明白的，不管是铃羽描述的悲惨的、残酷的未来，还是和桶子、铃羽一起战斗的日子，这一切我一直以为我是明白的。拔枪射击手染鲜血却依旧淡漠的铃羽，瘦削、面无血色的真由理与菲莉丝，躺在我怀里不会再动的琉华子，被世界玩弄的篝一行人……亲身实际接触过后，我才终于明白了，**我只是装作自己明白，其实一直在逃避**。反正我会在 2025 年死去——就这样蒙蔽了自己的双眼。可是——2025 年，我并没有死。**只是我的死作为“事实”被大家认知了而已**。所有人都被欺骗了。没错，被欺骗了。包括过去的我，和未来的大家，**世界被——欺骗了**。**本以为被确定的未来，其实还有别的样子**。  
