--- a/article/sg0/doc/0157.md
+++ b/article/sg0/doc/0157.md
@@ -1,7 +1,6 @@
 # 无限远点的牵牛星 - 05
 > 1.129954  
-> [ 2011/07/07 铃羽视角 ] 真由理来到时间机器处找到铃羽，得知了一切真相。她明确了自己的心意，想要再次见到凤凰院凶真，决定去执行铃羽构思的作战「牵牛星的复活」。这时铃羽收到了一封来自未来的视频邮件。  
-> 在铃羽检修时间机器时，发现桶子在主控电脑核心处藏了一个硬盘，以防被其他人发现。然而根据 0141，在桶子的秘密基地被桐生萌郁带队袭击时，红莉栖的笔记本电脑和硬盘应该俄罗斯的武装部队物理毁灭了。所以不确定这里藏的硬盘是什么，是之前只破坏了笔记本电脑，移动硬盘被桶子私藏了，还是桶子有额外的备份，亦或只是单纯的秘密资料之类的。  
+> [ 2011/07/07 铃羽视角 ] 真由理来到时间机器处找到铃羽，得知了一切真相。她明确了自己的心意，想要再次见到凤凰院凶真，决定去执行铃羽构思的作战「牵牛星的复活」。这时铃羽收到了一封来自未来的视频邮件。伏笔：铃羽检修时间机器时，发现桶子在主控电脑核心处藏了一个硬盘，以防被其他人发现。  
 
 | [←prev](./0156) | [menu](../) | [next→](./0158) |
 
