--- a/article/sg0/doc/0162.md
+++ b/article/sg0/doc/0162.md
@@ -90,7 +90,7 @@
 “是……这样吗？你……原来是这种人吗？！”  
 “‘现在的我’什么也没干哦。”  
 雷斯吉宁轻描淡写地否定了我的质问。  
-“倒不如说，大约 10 年前，多亏了我的援助，救下了迷路的她，把她养育到这么大呢。”  
+“倒不如说，十多年前，多亏了我的援助，救下了迷路的她，把她养育到这么大呢。”  
 “竟然说是援助……！她要是过着普通的生活，怎么可能变成现在这样！”  
 “你能不能……不要吼那么大声呢？我头疼得要裂开了……  
  我……没有说谎。是她自己主动接触我的。  
