--- a/article/sg0/doc/0050.md
+++ b/article/sg0/doc/0050.md
@@ -1,44 +1,42 @@
 # 闭时曲线的碑文 - 13β
 > 1.129848  
-> [ 2010/12/15 ] 接 0017 - 关闭手机。与教授见面前，在秋叶原的天桥遇到了吹雪和枫。被问到喜欢的人时想起杀死红莉栖的场景而感到难受，随后疑似感觉跳线。  
+> [ 2010/12/15 ] 接 0017 - 关闭手机。与教授和真帆见面前，在秋叶原的天桥偶遇吹雪和枫。被问到喜欢的人，想起杀死红莉栖的场景而痛苦干呕，然后疑似感觉跳线。  
 
 | [←prev](./0017) | [menu](../) | [next→](./0051) |
 
 ---
 
-手机关机了。我慢慢站了起来。如果琉华子看到现在的我，大概又会担心吧，还是赶紧离开为好。虽然有些蹒跚，但还不至于走不动。  
+我关掉了手机，慢慢站了起来。如果琉华子看到现在的我，大概又会担心吧，还是赶紧离开为好。虽然步履蹒跚，还不至于走不动。  
 
-站在秋叶原的天桥上，我感觉喉咙非常干，将矿泉水一饮而尽，然后吐了口气。和雷斯吉宁教授他们约定的时间还有一会儿，我站在这里吹风，想让自己恢复过来。漫不经心地俯瞰景色，周围全都是圣诞的颜色，充满欢快的气氛。和现在的我正相反。反复深呼吸着，呕吐感还没有消失，头痛也只是稍微缓解了一点。在这种状况下去和雷斯吉宁教授他们见面的话，绝对会被担心的吧。  
-这时，我发现走在天桥阶梯上的女性二人组正朝我这边看来。我在愈发昏暗的光线中凝视，试图辨别对方的脸。同时，二人组其中的短发少女轻轻地挥了挥手。  
+![](../static/image/0018-1.png)
+
+我站在秋叶原的天桥上，感觉喉咙非常干，于是将手里的矿泉水一饮而尽，然后长出了一口气。和雷斯吉宁教授他们约定的会面时间还有一会儿，我站在这里吹风，想让自己恢复过来。漫不经心地俯瞰街景，周围全都是圣诞的颜色，充满欢快的气氛——和现在的我正相反。反复深呼吸，呕吐感还没有消失，头痛也只是稍微缓解了一点。以这种状态去见雷斯吉宁教授他们，绝对会被担心的吧。  
+这时，我注意到，走在天桥阶梯上的女性二人组正朝我这边看来。天色愈发昏暗，我凝视试图辨认对方的脸。同时，二人组中的短发少女朝我轻轻挥了挥手。  
 “果然是冈伦啊！”  
 “你好。”  
-另一位长发的少女也轻轻地向我问好。  
-“啊，你们是，真由理的朋友。”  
-她们靠近之后我终于认出，是和真由理一起 cosplay 的朋友。名字的话，只知道 cosplay 名，貌似是……吹雪和枫。哪一个是吹雪，哪一个是枫呢？  
-“没事吧？看起来状态不太好的样子……”  
-长发的少女温柔地关心着我，我连忙表示没事。如果她们因为担心而去联系了真由理的话，之后还要费力去解释，我不想让真由理为没必要的事担心。真是一开始就不应该回秋叶原的，只是在街上走走就会碰到认识的人。刚刚从神社出来就应该向神田方向走的。  
+另一位长发少女也轻声向我问好。  
+“啊，你们是真由理的朋友。”  
+靠近后我终于认出，她们是和真由理一起 cosplay 的朋友。我只知道 cosplay 名，貌似是……吹雪和枫——哪一位是吹雪，哪一位是枫呢？  
+“你没事吧？看起来状态不太好呢……”  
+长发少女温柔地关心我，我连忙表示没事。要是她们出于担心而联系真由理，之后还要努力解释——我不想让真由理为没必要的事担心。一开始就不该回秋叶原的，随便在街上走走就会碰到认识的人。刚刚从神社出来就应该直接向神田方向走的。  
 “冈伦总是看起来很痛苦的样子。”  
-“……是吗？”  
-“是的哦。看着那样的冈伦，真由喜也很痛苦的样子……  
- 我也是，看到冈伦和真由喜就会变得要哭出来一样……  
+“……有吗？”  
+“有的哦。看着那样的冈伦，真由喜也很痛苦的样子……  
+ 我也是，看着那样的冈伦和真由喜也很想哭……  
  啊，我在说什么啊……”  
-短发少女属于外向开朗的类型，对我的称呼方式应该是照搬了真由理的。她说话的方式非常直球，身边的少女小声叫了她的名字想提醒她委婉些，她也依旧一口气地说了出来。看来这个叫作吹雪的女孩子非常重视真由理啊。明白了这一点，我的情绪变得温和起来。  
+短发少女属于外向开朗的类型，照搬了真由理对我的称呼。她说话的方式非常直球，身边的长发少女小声叫她的名字想提醒她委婉些，她依旧一口气说完了。看来这位名叫吹雪的女孩子非常重视真由理，这让我十分欣慰，情绪也温和了一些。  
 “那个……冈伦喜欢的人，是谁啊？”  
-“……！？”  
-吹雪突然给予我暴击。  
-喜欢的……人……  
-视野角落里，浑身鲜血的红莉栖幻影又出现了。双手回忆起了夺走她生命的那个瞬间的触感，变得十分麻木。不妙，冷静——  
+“什……！？”  
+吹雪突然给予我暴击。喜欢的……人……我再也控制不住，脑海中清晰地浮现，红莉栖浑身是血倒在我怀里的场景，双手也回忆起，夺走她生命那个瞬间的触感，变得冰冷而麻木。不妙，冷静——  
 “呕……！”  
-“冈伦先生？没事吧？”  
-“对，对不起！问了失礼的问题！那个……我……”  
-看到我弯腰捂嘴十分痛苦的样子，枫更加担忧了，吹雪也一脸慌张而抱歉的表情。  
+“冈伦先生，你没事吧？”  
+“对、对不起！问了失礼的问题！那个……我……”  
+看到我弯腰捂嘴拼命压抑呕吐感的样子，枫更加担忧了，吹雪也一脸慌张而抱歉的表情。  
 
-我还来不及回话，突然一阵天旋地转的感觉传来，仿佛要将我从这个世界抽离。  
-强烈的眩晕感，与平时偶尔的头晕目眩不同。  
-就像从大脑中心向外扭曲，  
-就像这世界本身开始摇晃。  
-既视感。我很熟悉的，
-这种感觉是——  
+“呃、啊……没事……我还有事就先走了……”  
+我像是逃跑一样，和二人分别了。  
+
+我还来不及回话，突然感到天旋地转，仿佛要将我从这个世界抽离。强烈的眩晕感，与平时偶尔的头晕目眩不同，仿佛从大脑中心向外开始扭曲，仿佛世界本身也被扭曲。我很熟悉，这种既视感是——*Reading·Steiner* 吗！？
 
 
 <br/>
