--- a/article/sg0/doc/0024.md
+++ b/article/sg0/doc/0024.md
@@ -6,54 +6,53 @@
 
 ---
 
-“冈伦！今天，之前说过要在 LAB 开圣诞派对这件事吧，有好好的记得吗？”  
-真由理的声音从电话那边传来，听起来正在兴头上。  
+“冈伦！之前说过要今天在 LAB 开圣诞派对这件事吧，有好好记得吗？”  
+我正在和真由理通话，她的声音听起来兴致很高。  
 “啊啊，当然了。”  
-当然记得。真由理早就开始为了这一天准备了，应该是非常期待的吧。  
+当然记得，真由理早就开始为了这一天做准备了，肯定非常期待吧。  
 “怎么样，能来吗？”  
-“能啊。6 点开始是吧？”  
+“能啊，6 点开始是吧？”  
 “嗯\~现在，在大学？”  
 “没，在和光市，研究所一类的地方，来叨扰认识的教授。”  
-“唔诶诶\~和光市……”  
+“唔诶\~和光市……”  
 这家伙，绝对连和光市在哪都不知道吧。  
 “赶得上吗？”  
 “没问题的。”  
-“那就好。等你哦\~”  
-突然，话筒那边真由理的远处，突然传来了其他女孩子们的声音。  
-吹雪：“冈伦\~女孩子全部都穿上圣诞装等着你了哦\~”  
+“那就好，等你哦\~”  
+突然，话筒那边传来了远处其他女孩子们的声音。  
+吹雪：“冈伦\~女孩子们全都穿上圣诞装等着你了哦\~”  
 菲莉丝：“冈伦\~等你喵\~”  
 绹：“在……在等你！”  
-吹雪：“来啊，琉华君也是\~”  
+吹雪：“快来啊，琉华君也是\~”  
 琉华：“诶诶？！我并不是女……”  
 枫：“琉华君也在 cosplay 哟\~”  
 琉华：“不、不好意思！我马上脱下来！现在马上就脱下来……！”  
 由季：“啊啦，真可惜，明明这么合身的。”  
-“真是热闹啊……”  
-“诶嘿嘿\~现在正在绝赞准备中\~”  
-吹雪：“真由喜她啊，现在穿着超级迷你裙版的圣诞服，非常非常可爱的哟\~  
- 顺便一提，胖次的颜色是粉色 da☆ze！”  
+“真热闹啊……”  
+“诶嘿嘿\~正在绝赞准备中\~！”  
+吹雪：“真由喜啊，现在穿着超级迷你裙版的圣诞装，非常非常可爱哟\~  
+ 顺便一提，胖次是粉色 da☆ze！”  
 “呜哇！吹雪酱你在说些什么啊！！”  
 “哦……”  
 “那、那个……对不起呢，让你听到了奇怪的话。总之，等你哦\~”  
 “啊啊……”  
 “那，待会儿再说吧\~”  
-派对现场的 LAB，看起来已经是祭典一般的状态了。女孩子们聚在一起，聊天也会越聊越起劲吧。琉华子……作为唯一的男生，加油啊！  
-我一边苦笑着，一边收起了手机。  
+派对现场看起来已经是祭典一般的状态了。女孩子们聚在一起，也会越聊越起劲吧。琉华子……作为唯一的男生，加油啊！我苦笑着收起了手机。  
 
 “真热闹啊。”  
-见我已经结束通话，比屋定向我搭话。事实上这里一直就只有我和比屋定两个人而已。  
+见我已经结束通话，比屋定向我搭话。今天我来到了【脑科学综合研究机构·日本办公室&准备室】找比屋定，在这种日子里，办公室里就只有我们两个人而已。  
 “其实，今天和朋友们约好要开圣诞派对。”  
 “嗯，说起来，确实已经到这种时候了啊。”  
-“你好像对这类事不是很在意呢。”  
-“特别是来了这里之后。平常一直都待在这里，最近遇到的人，也全都是警察。”  
-比屋定苦笑着回答。我稍微张望了房间，四处空落落的，鸦雀无声，与电话那头发出喧噪声的 LAB 形成了对比。这里和第一次来时相比几乎没有多大变化。总之，在这里工作的仍旧只有比屋定和雷斯吉宁教授。并且教授好像也要借着来日本的机会，和很多研究者们见面，经常不在的样子。也难怪现在的比屋定过着和家里蹲别无二致的生活。而且，嘛，研究者的话一般也就是这样的吧……  
-“可以的话，比屋定也一起来吧？”  
+“你好像对这类事情不是很在意呢。”  
+“特别是来这里之后，平常一直都待在这里，最近遇到的人，也全都是警察。”  
+比屋定苦笑着回答。我稍微张望房间，四处空落落的，鸦雀无声，与电话那头喧闹的 LAB 形成强烈对比。这里和第一次来时相比几乎没有多大变化，在这里工作的仍旧只有比屋定和雷斯吉宁教授。并且教授好像也要借着来日本的机会，和很多研究者们见面，经常不在的样子。也难怪现在的比屋定过着和家里蹲别无二致的生活。而且，嘛，研究者一般也都是这样的吧……  
+“可以的话，比屋定小姐也一起来吧？”  
 一直遇到那种事情，消遣应该是很有必要的。  
-“我？用不着为我操心。能够像这样一个人做研究，是很轻松的，毕竟不用为人际关系而烦恼。”  
+“我？不用操心我。这样一个人做研究很轻松，毕竟不用为人际关系而烦恼。”  
 “这样啊。”  
 红莉栖也说过类似的话呢。红莉栖……  
 “比起这些，快点进入正题吧！”  
-对了，我今天特意来找比屋定，可并不是为了聊家常的。  
+事实上，我今天特意来找比屋定，可并不是为了聊家常的。  
 “刚才你说过想和‘红莉栖’道歉，为此才来到这里，对吧？”  
 “嗯，是的。”  
 “为什么？”  
@@ -80,6 +79,8 @@
  你一直这么盯着手机也没什么用啊。”  
 “我……我知道了，别催我啊。”  
 虽然感觉很麻烦，但是在比屋定推动下我终于又一次按下了那个图标。
+
+![](../static/image/0024-1.png)
 
 “……！？等下……  
  你……居然又打电话来了？  
