--- a/article/sg0/doc/0007.md
+++ b/article/sg0/doc/0007.md
@@ -12,7 +12,7 @@
 “冈部先生\~真由理酱\~”  
 已经汇合在等着我们的菲莉丝跟琉华子，见到我们以后马上跑了过来。  
 “真想见你啊喵\~！”  
-毫不犹豫地抱紧我的，是菲莉丝·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名秋叶留未穗的她本人却一直强调说私下里也要叫她菲莉丝。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅 *MayQueen+Nyan²* 开心地作为金牌女仆工作着。今天身上也是和以前一样，穿着店里的女仆装。MayQueen 里到时候是不是也会换上圣诞服装呢？  
+毫不犹豫地抱紧我的，是菲莉丝·喵喵。虽然我知道这是所谓的“女仆小姐”模式用名，本名秋叶留未穗的她本人却一直强调说私下里也要叫她菲莉丝。明明实际身份是堪称秋叶原地主的秋叶家的大小姐，却在自家的女仆咖啡厅 *MayQueen+Nyan²* 开心地作为金牌女仆工作着。今天身上也是和以前一样，穿着店里的女仆装。MayQueen 里到时候是不是也会换上圣诞装呢？  
 “别，别这样啦……大家都看着呢。”  
 想把菲莉丝从身上支开，但是却很难做到。干脆把头上的那个猫耳抢过来算了。  
 “有什么不好的喵！毕竟是凶真和菲莉丝的关系喵\~”  
