--- a/article/sg0/doc/0008.md
+++ b/article/sg0/doc/0008.md
@@ -93,12 +93,12 @@
 “别·用·这·种·名·字·叫·我！”  
 灵魂级别的事情……吗？那个时候无意中的一句话，现在感觉却拥有了更深的意义。就像雷斯吉宁教授在研讨会上说的那样，眼前的“她”也总有一天会成为真正的**人工灵魂**，存在于这里吧。到那个时候，就算肉体毁灭灵魂也依然存在于这个世界的状态，我们到底应该怎么称呼呢？既不是生也并非是死，夹缝的“存在”——这已经不是科学，可能是哲学或宗教的范畴了。  
 
-“蠢话就到此为止吧。冈部先生也不是为了听这种毫无内涵的话来到这里的。”  
+“蠢话就到此为止吧，冈部先生也不是为了听这种毫无内涵的话来到这里的。”  
 “想这样蒙混过关，更可疑了呢！”  
 “给你塞点病毒哟……”  
 “我错了，我不会再说了。”  
-“红莉栖”慌张地认输了。大概，生前的红莉栖和比屋定真帆也是每天上演这样的对话吧……雷斯吉宁教授是否会感到厌烦呢？  
-“这么吵闹真是不好意思，冈部先生。要和“她”说点什么吗？”  
+“红莉栖”慌张地认输了。大概，生前的红莉栖和比屋定真帆，每天也会上演这样的对话吧……雷斯吉宁教授是否会感到厌烦呢？  
+“这么吵闹真是不好意思，冈部先生，要和“她”说点什么吗？”  
 “啊、啊……”  
 被比屋定真帆催促着坐到电脑前的椅子上。正面显示器显示着“红莉栖”的脸，视线相交，她微微笑了起来。明明是初次见面，她是会用这么柔和表情的家伙吗？我表示疑问。但是，一开始我和红莉栖相遇的方式太糟糕了，不如说，她对我的那种带刺的态度才是异常的。  
 “什么问题都可以问，我会在可能的范围内回答你的。”  
