--- a/article/sg0/doc/0011.md
+++ b/article/sg0/doc/0011.md
@@ -86,7 +86,7 @@
 由季：“哇，除了 CM 的份之外还要做啊！真由理酱真有干劲呢。”  
 真由理：“真由喜干劲满满的哟\~呼呼！”  
 真由理这么说着鼓起了干劲，做了个小小的胜利姿势。  
-枫：“圣诞服的话，可爱的迷你裙很不错啊。配上白色的过膝长袜和红色的长筒皮靴……”  
+枫：“圣诞装的话，可爱的迷你裙很不错啊。配上白色的过膝长袜和红色的长筒皮靴……”  
 吹雪：“诶——？枫酱倒还好，我好像不适合这种吧”  
 克美没有自信地向真由理和由季问道。  
 由季：“明明是很喜欢可爱的衣服的说\~”  
