--- a/article/sg0/doc/0015.md
+++ b/article/sg0/doc/0015.md
@@ -174,8 +174,8 @@
 “新型脑炎虽然传染力弱，但是潜伏期很长，会突然发作。症状的话，以幻觉和记忆障碍为主。比如说，在病例报告中，患者本应在公司工作的，回过神来已经在家里了；以及脑海中出现与没有见过的人会面的记忆之类的；还有就是，患者觉得事情发生了但实际上没有发生的记忆混乱也有出现。无法区别梦境与现实，时间感的丧失，与周围的人记忆不一致而陷入错乱状态一类的。换言之，像是没睡醒的状态，也可以说是症状更加明显的既视感。”  
 “关于治疗的方法有什么办法吗？”  
 “与其他的脑炎不同，只要接受适当的治疗的话能够相对快速地完全康复。所以，我想即便国内出现感染者的话，也不是那么令人恐惧的事情。”  
-电视中的主持人在继续的说着，但是那个声音已经无法传入我的耳朵了。刚才的新闻对我具有如此的冲击性。新型脑炎？专家说明的症状，我有过亲身体会。无法区别梦境与现实，时间感丧失，与周围人的记忆不一致……那不正是——  
-*Reading·Steiner* 吗？  
+电视中的主持人在继续的说着，但是那个声音已经无法传入我的耳朵了。刚才的新闻对我具有如此的冲击性。新型脑炎？专家说明的症状，我有过亲身体会。无法区别梦境与现实，时间感丧失，与周围人的记忆不一致……那不正是——*Reading·Steiner* 吗！？  
+
 
 <br/>
 
