--- a/article/sg0/doc/0054.md
+++ b/article/sg0/doc/0054.md
@@ -79,7 +79,7 @@
 “虽然只是比平时稍微好吃一点点的饭菜，但就算这样我还是很开心……”  
 在通向第三次世界大战的未来里，应该没有庆祝的空闲。就算在这样的世界里，真由理果然还是真由理——她一直都怀着和现在一样，想给大家带来笑容的心情吧。  
 “桶子君想要吃些什么？”  
-“只要有可爱的女孩纸穿着圣诞服的话，我就满足了哦！”  
+“只要有可爱的女孩纸穿着圣诞装的话，我就满足了哦！”  
 “嗯…料理要准备多少呢？虽然是要和由季一起准备的……对了，叫琉华君和菲莉丝也来帮忙吧。”  
 真由理的脑子已经装满了圣诞派对的事情了。  
 “冈伦有想邀请来派对的人吗？”  
