--- a/article/sg0/doc/0164.md
+++ b/article/sg0/doc/0164.md
@@ -1,6 +1,6 @@
 # 无限远点的牵牛星 - 12
 > 1.129954  
-> [ 2011/07/07 ] 冈伦回到 LAB，阅读真由理的邮件，痛苦不已。他终于再度身披白袍，号令众人，在两天后完成了『时间跳跃机』。  
+> [ 2011/07/07 ] 冈伦回到 LAB，阅读真由理的邮件，痛苦不已。他终于再度身披白袍，号令众人，在两天后完成了『电话微波炉(暂)·二号机』。  
 
 | [←prev](./0163) | [menu](../) | [next→](./0165) |
 
