--- a/article/sg0/doc/0157.md
+++ b/article/sg0/doc/0157.md
@@ -91,9 +91,9 @@
  因为我想明白了，能打开命运石之门的，不是放弃当牵牛星的普通星星——只能是‘真由姐的牵牛星’。  
  所以，我思考的新的作战是——「牵牛星的复活」。  
  用爸爸的风格来说的话——”  
- 就是「Operation·Altair（牵牛星）」、「Operation·Arclight（织女星）」之类的，  
- 或者，取让牛郎和织女连接在一起的含义，应该是「Operation·Deneb（鹊桥）」？  
- ……爸爸那样的命名品位，我身上好像没有呢。”  
+ 「*Operation·Altair*（牵牛星）」、「*Operation·Arclight*（织女星）」之类的，  
+ 或者，取让牛郎和织女连接在一起的含义，应该是「*Operation·Deneb*（鹊桥）」？  
+ ……爸爸那种命名品位，我身上好像没有呢。”  
 
 一直安静地听着铃羽说话的真由理，突然摇摇晃晃地站了起来。  
 “呐，铃小姐，那个作战……让真由喜来执行吧。”  
