--- a/article/sg0/doc/0165.md
+++ b/article/sg0/doc/0165.md
@@ -6,147 +6,106 @@
 
 ---
 
-果断的时间跳跃后我注意到，自己站在秋叶原道路的中央，手中紧握着手机。”  
-“感到剧烈的头痛和脸部电击般的痛感。”  
-“像偏头痛发作的时候一样，一边脑袋和左边脸感到剧痛，眼前明暗闪烁视界不清。”  
-“赶紧环视四周。”  
-“秋叶原的道路还很平稳。”  
-“听不到爆炸声和交火声。”  
-“宅男宅女们都在开心地购物，穿着女仆装的女孩在招揽客人。”  
-“看到这些，我确信了。”  
-“时间跳跃成功了。”  
-“确认手机的时间。”  
-“7 月 7 日，17 时 45 分。”  
-“距离“战争开始”，还有 40~50 分钟的空当。”  
-“即使这样，时间还完全不够……”  
-“因为时间跳跃有 48 小时的跳跃限制，回到这里已经是极限了……。”  
-“不行，不能消极思考。”  
-“如果机器完成再晚一点的话，那一切都迟了。能赶上已经够好了。”  
-“这个时间我是在做什么，我很清楚。”  
-“为了找失踪的真由理，奔走在秋叶原各处。”  
-“首先要给真帆电话。”  
-“喂喂！？找到了吗！？”  
-“不是。但知道在哪了。赶紧回 LAB 来！”  
-“没有听真帆的回复我就挂断了电话，返往 LAB。”  
+“唔……”  
+回复意识之后，发现自己正站在秋叶原小巷的中央，手中紧握着手机。感到剧烈的头痛，左边脸部也有电击般的痛感，好像偏头痛发作一样，眼前明暗闪烁视界不清。我赶紧观察周围，小巷依旧平和，听不到爆炸声和枪声。宅男宅女们都在开心地购物，穿着女仆装的女孩在招揽客人。看到这些，我确信，时间跳跃成功了。  
+掏出手机确认时间，7 月 7 日，17 时 45 分。距离“战争开始”，还有 40~50 分钟的空当，但这时间完全不够……因为时间跳跃有 48 小时的限制，回到这里已经是极限了……不行，不能消极思考。要是机器完成的时间再晚一点，那一切都迟了，能赶上已经足够了。  
+我很清楚，这个时候的自己在做什么——为了寻找失踪的真由理，奔走在秋叶原各处。真帆也一样，所以首先要给她打个电话。  
+“喂！？找到了吗！？”  
+“没有，但知道在哪了，你赶紧回 LAB 吧！”  
+没有听真帆的回复，我就挂断了电话，返回 LAB。  
 
-“回到 LAB，真帆已经到了。”  
-“找到真由理了吧？不用去接她吗？”  
-“桶子表情有些尴尬，是因为刚刚揍了我吧。”  
+回到 LAB，真帆已经到了。  
+“找到真由理小姐了吧？不用去接她吗？”  
+桶子表情有些尴尬，是因为刚刚揍过我吧。  
 “比屋定小姐！你做的很好！”  
-“哎……？”  
-“我捉住真帆的双手，紧紧地握了手。”  
-“真帆和桶子都因为没有搞清状况，一副疑惑的表情。”  
-“我是从 48 小时之后的未来时间跳跃回来的！”  
-“唉？”  
+“啊……？”  
+我抓住真帆的双手，紧紧地握住。真帆和桶子都没有搞清状况，一脸疑惑。  
+“我是从 48 小时之后的未来跳跃回来的！”  
+“诶？”  
 “真的！？”  
-“……完成了吗？最少也是在之后的 48 小时内？”  
+“……完成了吗？在之后的 48 小时内？”  
 “啊啊。”  
-“到底是怎么……”  
-“之后再说明。”  
-“时间紧迫。听好了！这关乎许多人的性命!。”  
-“任务内容在完成『电话微波炉(暂)·二号机』的时间里，已经模拟过好几遍了。”  
-“应该传达什么，已经想好了。”  
-“比屋定小姐，立刻接入『Amadeus』，把“红莉栖”和“真帆”连同备份一齐删掉。”  
-“雷斯吉宁根本没有把它和平利用的打算。”  
-“什，什么……这也太乱来了……”  
-“说了我是时间跳跃回来的了吧！不过 1 个小时，秋叶原就会化为战场！时间机器会被盯上！”  
-“那将成为第三次世界大战的开端。不阻止的话，铃羽和真由理都会死！”  
-“听到这个，真帆和桶子都倒吸了一口气。”  
+“到底是怎么做到的……”  
+“这个之后再说明。时间紧迫，听好了！这关乎许多人的性命!”  
+在制造『电话微波炉(暂)·二号机』的时间里，我已经模拟过许多次任务内容，想好了应该向她们传达些什么。  
+“比屋定小姐，立刻接入『Amadeus』，  
+ 把‘红莉栖’和‘真帆’连同备份一齐删掉。  
+ 雷斯吉宁根本不打算把它用于和平。”  
+“什、什么啊……这什么乱七八糟的……”  
+“都说了我是时间跳跃回来的吧！  
+ 不到一小时，秋叶原就会成为战场！时间机器被盯上了！  
+ 那将成为第三次世界大战的开端，不阻止的话，铃羽和真由理都会死！”  
+听到这，真帆和桶子都倒吸了一口气。  
 “真的？诶……真的！？”  
-“所以请照我说的做。”  
-“虽然能访问数据，但要从外部操作，需要教授的管理员权限。”  
-“那之后就是桶子的工作了。入侵进去，把数据完全破坏。”  
-“*Okey-dokey!*交给我了！”  
-“桶子扑向了电脑。怎么说也是女儿的危机，当然吧。”  
-“真帆也在桶子旁边坐下，输入自己的 ID 和密码，开始接入『Amadeus』。”  
+“所以希望你们按我说的做。”  
+“……虽然数据是可以访问，但要从外部操作，需要教授的管理员权限。”  
+“那就是桶子的工作了，黑进去，把数据彻底破坏。”  
+“*Okey-dokey!* 交给我吧！”  
+桶子扑向了电脑，怎么说也是女儿的危机。真帆也在桶子旁边坐下，输入自己的 ID 和密码，开始接入『Amadeus』。  
 “我要去广播会馆！这里就交给你们了！”  
-“冈伦！铃羽，拜托了……！”  
-“啊啊！——交给我吧！”  
-“对着面朝电脑向我说话的桶子，我给了他一个强有力的回复。”  
+“冈伦！铃羽就拜托你了……！”  
+“啊啊！交给我吧！”  
+桶子依旧盯着电脑，来不及看我。我坚定地回应了他的话。  
 
 “铃羽！真由理！”  
-“来到广播馆的楼顶上，看到我的身影的真由理慌张的躲到时间机器的背后。”  
+来到广播会馆的楼顶，真由理看到我的身影，慌张地躲到时间机器背后。  
 “冈伦……”  
-“真由理不敢直视我的眼睛。”  
-“那双眼睛，大概是因为一直在哭都有些红肿了。”  
-“关于 α 世界线红莉栖的牺牲，她听到我说的话了。”  
-“会让真由理这么痛苦，我再次感到揪心。”  
-“真由理……你准备用时间机器回到过去吗？”  
+真由理不敢直视我的眼睛。她的双眼有些红肿，大概是因为一直在哭。她听到了 α 世界线红莉栖牺牲的事，让她这么痛苦，我再次感到揪心。  
+“真由理……你准备乘坐时间机器回到过去吗？”  
 “诶……为什么……”  
-“我是从 48 小时之后时间跳跃来的。我全部都知道。”  
-“什……这个，是真的？”  
-“我对着两人点头。”  
-“这里要不了三十分钟就会变成战场。”  
-“诶！？”  
-“莫非……时间机器的事情，被泄露了？”  
+“我是从 48 小时之后时间跳跃来的，我全部都知道了。”  
+“什……这是真的吗？”  
+我对着两人点头。  
+“这里不到三十分钟就会成为战场。”  
+“诶！？难道……时间机器的情报，被泄露了？”  
 “嗯。”  
-“糟糕了。那么，只有现在就跳跃了。”  
-“铃羽正要钻进机器的驾驶室。”  
-“不，稍微等一下。桶子和比屋定小姐现在正在争取主动权。”  
-“他们两个人很优秀，一定会成功吧。但是……如果，没有按照预期的进行的话……”  
-“没有按照预期的话？”  
-“……你们，可能会死。”  
-“可能，这是什么意思？冈伦叔叔时间跳跃之前的世界里，我们怎么样了？”  
-“……话说，叔进行时间跳跃的话，证明有什么致命性的“失败”。是这样吧？”  
+“糟糕了，那么，只能现在立刻跳跃了。”  
+铃羽正要钻进机器的驾驶室。  
+“不，稍微等一下，桶子和比屋定小姐正在争取主动权。  
+ 他们俩都很优秀，一定会成功的。  
+ 但是……如果，没有按照预期进行的话……”  
+“会怎样？”  
+“……你们，或许会死。”  
+“‘或许’是什么意思？冈伦叔叔时间跳跃前的世界里，我们出了什么事？  
+ ……不如说，叔叔进行了时间跳跃，这就代表，出现了某种致命性的‘失败’，对吧？”  
+那件事，是否应该告诉她们呢……不，没时间犹豫了。  
+“铃羽和真由理乘坐的时间机器，在时间跳跃的瞬间，被导弹击中了。”  
+“啊……！”（x2）  
+“不过……在时间机器的残骸中，并没有发现你们俩的遗体……”  
+“……原来如此，所以才说‘或许’啊。  
+ 这就说明，未来并没有被确定，还留有成功的可能性。”  
+“……我就知道铃羽会这么说。”  
+“别阻止我，叔叔。”  
+她的眼神充满了决心，那眼神在说，如果我阻止，她会不惜使用暴力……当然，我原本也不打算阻止铃羽的时间跳跃。这是她来到这里的“使命”，我不能改变她的决心。不如说，我就是为了不让 STRATFO 妨碍她，才跳跃回这个时间的。可是，真由理呢……自从读了真由理的邮件，我脑中不断升起又被压下的“犹豫”，再次占据了上风。  
+“……呐，真由理，你真的要去吗？”  
 “……”  
-“这是，是否应该当这两人的面说呢……”  
-“不，没有时间犹豫了。”  
-“铃羽和真由理乘坐的时间机器，在时间跳跃的瞬间，被火箭弹命中了。”  
-“……！”  
-“……！”  
-“但是……”  
-“你们两个人的尸体，在机器的残骸中并没有被发现……”  
-“……原来如此。所以才是“可能”。”  
-“这样的话未来并没有被确定。还留有成功的可能性。”  
-“……铃羽的话，我就知道会这么说的。”  
-“别阻止我，叔。”  
-“那眼神充满了决意。”  
-“如果阻止的话，不惜暴力也要去做……眼神这么说道。”  
-“当然，我原本，也没有想去阻止铃羽的时间跳跃。”  
-“她为了那个『使命』而来，我无法改变她的决心。”  
-“不如说我就是为了不让 STRATFO 妨碍她跳跃，才时间跳跃到这个时间来的。”  
-“但是，真由理……”  
-“自从读了真由理的邮件，我脑中不断生灭的『犹豫』，又抬起头来。”  
-“……呐，真由理。真的要去吗？”  
-“……”  
-“对你有所隐瞒，我道歉。”  
-“但是，我也是，红莉栖也是，大家都……最喜欢你了。”  
-“想要拯救这样的你，我们才到达了这个世界线。”  
-“然而，你如果走了……我……我们……”  
+“一直瞒着你，我道歉。  
+ 但是，我也是，红莉栖也是，大家都……最喜欢你了。  
+ 为了拯救你，我们才到达了这条世界线。  
+ 然而，你如果离开了……我……我们……”  
 “冈伦……”  
-“不，你的感情我很理解。但是……”  
-“呐，冈伦叔叔？”  
-“在这时，铃羽轻轻的开口说道。”  
-“「*Operation·Arclight*（织女星）」已经启动了。”  
+“不，你的心情我很理解，可是……”  
+
+“呐，冈伦叔叔，「*Operation·Arclight*（织女星）」已经启动了。”  
+这时，铃羽轻轻开口说道。  
 “Operation……Arclight？”  
-“和我当初听到的计划不同。回去的不是 7 月 28 日，而是 8 月 21 日。”  
+“和我当初听到的计划不同，这次要回到的日期，不是 7 月 28 日，而是 8 月 21 日。”  
 “8 月 21 日！？”  
-“那一天，是铃羽乘坐时间机器回来的那一天……”  
-“不就是我，放弃所有的那一天吗。”  
-“这个作战，真由姐是必须的。”  
-“从未来的父亲那里，我收到了指示。就在刚才。”  
+那一天，是铃羽乘坐时间机器回来的那一天，也是……我放弃所有的那一天。  
+“这个作战，真由姐是必要的。就在刚才，我收到了这样的指示，从未来的父亲那里。”  
 “你说……什么……？”  
-“未来的桶子他们的——我所不知道的作战？”  
-“因此真由理是必须的？”  
-“铃羽意外的发言，让我的心如乱麻。”  
+未来的桶子他们制定的，我不知道的作战？为此真由理是必要的？铃羽意外的发言，让我心如乱麻。  
 “冈伦……”  
-“——说着，真由理贴近的像要抱过来一样，温柔的握住我的手。”  
-“那个表情，像是要哭出来一样。”  
-“然而，却一副开心的样子。”  
+——说着，真由理贴近我，温柔地握住我的手。她的表情，像是又要哭出来，却又带着几分释然。  
 “真由理……”  
 “让我去吧……好不好呐？”  
 “……”  
-“真由喜，也是 LABMem 哟？”  
-“灰心丧气的“牵牛星”，就让真由喜去把叫醒吧。”  
-“……”  
+“真由喜，也是 LABMem 哟？灰心丧气的‘牵牛星’，就让真由喜去叫醒他吧。”  
+“……！”  
 “拜托了。”  
-“我会想起邮件的内容。”  
-“深深的回想起，真由理究竟是以什么样的心情想要去跳跃的。”  
-“抬起头来，最后的『犹豫』也慢慢的消融了。”  
-“……我，是……”  
-“我一个人，以为自己把所有都扛了下来，看来是错的啊……”  
-“没有注意到周围的事情……”  
-“不仅仅是真由理，我的身边，明明有很多 LABMem 的。”  
+我回想起了邮件的内容，深刻地回想起了，真由理究竟是怀着什么样的心情决定跳跃的。心中最后的“犹豫”，慢慢消融了。  
+“我……啊……一直想着，要一个人，把所有事情都扛起来。看来……我错了啊……  
+ 一直没有注意到周围……不仅仅是真由理，我的身边，明明有这么多 LABMem 在的……”  
 “冈伦……”  
 
 “啪——”  
