--- a/article/sg0/doc/0166.md
+++ b/article/sg0/doc/0166.md
@@ -19,7 +19,7 @@
 “冈伦叔叔……！”  
 “所以，时间机器肯定会顺利跳跃的！是吧？！”  
 “当然了！”  
-事实上，篝以外的部队还有『教授』并没有出现，这就证明，桶子和真帆的任务顺利完成，从 STRATFO 手里成功保护了时间机器的秘密了吧。  
+事实上，篝以外的部队还有『教授』并没有出现，这说明，桶子和真帆的任务顺利完成，从 STRATFO 手里成功保护了时间机器的秘密了吗？  
 “真由理也去！快点！”  
 “可、可是，冈伦你怎么办！？”  
 真由理惊慌失措地看着我受伤的腿。  
