--- a/article/sg0/doc/0163.md
+++ b/article/sg0/doc/0163.md
@@ -45,7 +45,7 @@
 “不是的，冈伦去是不行的！这个呢，是真由喜的任务！”  
 “我不懂，我完全不懂啊！  
  拜托了，下来吧真由理。  
- 连你也被因果之环排除的话，那我是为了什么才选择了这个世界线——！”  
+ 连你也被因果之环排除的话，那我是为了什么才选择了这条世界线——！”  
 “冈伦！”  
 真由理温柔地抚摸着我的脸颊，悲伤地微笑着。然后，轻柔而坚定地推了我的肩膀。我因此失去平衡，手脱离了舱门。同时，舱门开始关闭。  
 “真由理！等等——！”  
